* Appended "earth" languages to language.py.
* Reorganized languages for a better api.
* Removed empty languages directory.
* Added tests for Corpus.
* Fixed Corpus so that stats are now eval'ed.
* Added load*() and get*() methods to Corpus for improved efficiency and a
better API.
* Added corpus.getAvailableLanguages() that lists all the source language files
(without the file extension).

2007.09.15

* Converted to using setuptools.
* Added a new directory for a combined adytum.ling package.
* Moved coprora into adytum.ling.
* Moved wordgen into adytum.ling.
* Rmeoved old content from README.
* Removed old, bogus tests.
* Updated site content.
* Moved corpora into wordgen.
* Changed my mind about namespaces: wordgen is now the top-level namespace
(again).
* Removed old adytum directory.
* Moved Language class out of init.
* Added corpora.files for standardizing access to corpora resources.
* Renamed corpora.files to corpora.corpus.

2006.07.26

* Created a wordgen package.
* Added placeholders for worgen submodules.
* Added more alphabets, vowels, etc.
* Started converting the bin scripts to use the new Syntagamata code.
* Moved wordgen.py to wordgen/syntagmata.py.
* Removed the old lib dir.
* Moved exception and type code out of syntagmata and into the placeholders.
* Moved letters and word classes out of syn and into an elemants module.
* Moved utf-8 file and counter into a utilities module.
* Cleaned up some files.
* Split up the languages file into a subpackage.
* Added bin/generateMythgarthurWordLists.py.
* Added more corpora.
* Merged branch to trunk (-r5:22).
* Renamed the old "examples" directory to "old".
* Updated the site news.
* Updated menu links.
* Part of wordgen.syntagmata never got committed to svn; now it should be.
* Added the tmp dir that didn't get merged from branch.
* Removed the blank languages.py file.
* Added a general python script for generating word lists.
* Added generated word lists in tmp.

2006.07.24
