@@ -15,6 +15,8 @@
 better API.
 * Added corpus.getAvailableLanguages() that lists all the source language files
 (without the file extension).
+* Renamed Syntagmata.makeChineseWord() to the more general makeCVWord().
+* Removed unused import from generate script.
 
 2007.09.15
 
